cmake_minimum_required(VERSION 3.7 FATAL_ERROR)

project(benni-lib-irrlicht-1.8.4 CXX)

if (TARGET Irrlicht)
	message("${BoldYellow}[benni] HEADER_GUARD: ${PROJECT_NAME}${ColourReset}")
else()

	set(IRR_HEADER_DIR ${CMAKE_CURRENT_LIST_DIR}/include)
	set(IRR_SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/src/Irrlicht)
	set(IRR_INCLUDE_DIR ${BENNI_SDK_INCLUDE_DIR}/Irrlicht)

	set(IRR_HEADERS 
		${IRR_HEADER_DIR}/aabbox3d.h
		${IRR_HEADER_DIR}/CDynamicMeshBuffer.h
		${IRR_HEADER_DIR}/CIndexBuffer.h
		${IRR_HEADER_DIR}/CMeshBuffer.h
		${IRR_HEADER_DIR}/coreutil.h
		${IRR_HEADER_DIR}/CVertexBuffer.h
		${IRR_HEADER_DIR}/dimension2d.h
		${IRR_HEADER_DIR}/driverChoice.h
		${IRR_HEADER_DIR}/EAttributes.h
		${IRR_HEADER_DIR}/ECullingTypes.h
		${IRR_HEADER_DIR}/EDebugSceneTypes.h
		${IRR_HEADER_DIR}/EDeviceTypes.h
		${IRR_HEADER_DIR}/EDriverFeatures.h
		${IRR_HEADER_DIR}/EDriverTypes.h
		${IRR_HEADER_DIR}/EGUIAlignment.h
		${IRR_HEADER_DIR}/EGUIElementTypes.h
		${IRR_HEADER_DIR}/EHardwareBufferFlags.h
		${IRR_HEADER_DIR}/EMaterialFlags.h
		${IRR_HEADER_DIR}/EMaterialTypes.h
		${IRR_HEADER_DIR}/EMeshWriterEnums.h
		${IRR_HEADER_DIR}/EMessageBoxFlags.h
		${IRR_HEADER_DIR}/EPrimitiveTypes.h
		${IRR_HEADER_DIR}/ESceneNodeAnimatorTypes.h
		${IRR_HEADER_DIR}/ESceneNodeTypes.h
		${IRR_HEADER_DIR}/EShaderTypes.h
		${IRR_HEADER_DIR}/ETerrainElements.h
		${IRR_HEADER_DIR}/fast_atof.h
		${IRR_HEADER_DIR}/heapsort.h
		${IRR_HEADER_DIR}/IAnimatedMesh.h
		${IRR_HEADER_DIR}/IAnimatedMeshMD2.h
		${IRR_HEADER_DIR}/IAnimatedMeshMD3.h
		${IRR_HEADER_DIR}/IAnimatedMeshSceneNode.h
		${IRR_HEADER_DIR}/IAttributeExchangingObject.h
		${IRR_HEADER_DIR}/IAttributes.h
		${IRR_HEADER_DIR}/IBillboardSceneNode.h
		${IRR_HEADER_DIR}/IBillboardTextSceneNode.h
		${IRR_HEADER_DIR}/IBoneSceneNode.h
		${IRR_HEADER_DIR}/ICameraSceneNode.h
		${IRR_HEADER_DIR}/IColladaMeshWriter.h
		${IRR_HEADER_DIR}/ICursorControl.h
		${IRR_HEADER_DIR}/IDummyTransformationSceneNode.h
		${IRR_HEADER_DIR}/IDynamicMeshBuffer.h
		${IRR_HEADER_DIR}/IEventReceiver.h
		${IRR_HEADER_DIR}/IFileArchive.h
		${IRR_HEADER_DIR}/IFileList.h
		${IRR_HEADER_DIR}/IFileSystem.h
		${IRR_HEADER_DIR}/IGeometryCreator.h
		${IRR_HEADER_DIR}/IGPUProgrammingServices.h
		${IRR_HEADER_DIR}/IGUIButton.h
		${IRR_HEADER_DIR}/IGUICheckBox.h
		${IRR_HEADER_DIR}/IGUIColorSelectDialog.h
		${IRR_HEADER_DIR}/IGUIComboBox.h
		${IRR_HEADER_DIR}/IGUIContextMenu.h
		${IRR_HEADER_DIR}/IGUIEditBox.h
		${IRR_HEADER_DIR}/IGUIElementFactory.h
		${IRR_HEADER_DIR}/IGUIElement.h
		${IRR_HEADER_DIR}/IGUIEnvironment.h
		${IRR_HEADER_DIR}/IGUIFileOpenDialog.h
		${IRR_HEADER_DIR}/IGUIFontBitmap.h
		${IRR_HEADER_DIR}/IGUIFont.h
		${IRR_HEADER_DIR}/IGUIImage.h
		${IRR_HEADER_DIR}/IGUIImageList.h
		${IRR_HEADER_DIR}/IGUIInOutFader.h
		${IRR_HEADER_DIR}/IGUIListBox.h
		${IRR_HEADER_DIR}/IGUIMeshViewer.h
		${IRR_HEADER_DIR}/IGUIScrollBar.h
		${IRR_HEADER_DIR}/IGUISkin.h
		${IRR_HEADER_DIR}/IGUISpinBox.h
		${IRR_HEADER_DIR}/IGUISpriteBank.h
		${IRR_HEADER_DIR}/IGUIStaticText.h
		${IRR_HEADER_DIR}/IGUITabControl.h
		${IRR_HEADER_DIR}/IGUITable.h
		${IRR_HEADER_DIR}/IGUIToolbar.h
		${IRR_HEADER_DIR}/IGUITreeView.h
		${IRR_HEADER_DIR}/IGUIWindow.h
		${IRR_HEADER_DIR}/IImage.h
		${IRR_HEADER_DIR}/IImageLoader.h
		${IRR_HEADER_DIR}/IImageWriter.h
		${IRR_HEADER_DIR}/IIndexBuffer.h
		${IRR_HEADER_DIR}/ILightManager.h
		${IRR_HEADER_DIR}/ILightSceneNode.h
		${IRR_HEADER_DIR}/ILogger.h
		${IRR_HEADER_DIR}/IMaterialRenderer.h
		${IRR_HEADER_DIR}/IMaterialRendererServices.h
		${IRR_HEADER_DIR}/IMeshBuffer.h
		${IRR_HEADER_DIR}/IMeshCache.h
		${IRR_HEADER_DIR}/IMesh.h
		${IRR_HEADER_DIR}/IMeshLoader.h
		${IRR_HEADER_DIR}/IMeshManipulator.h
		${IRR_HEADER_DIR}/IMeshSceneNode.h
		${IRR_HEADER_DIR}/IMeshWriter.h
		${IRR_HEADER_DIR}/IMetaTriangleSelector.h
		${IRR_HEADER_DIR}/IOSOperator.h
		${IRR_HEADER_DIR}/IParticleAffector.h
		${IRR_HEADER_DIR}/IParticleAnimatedMeshSceneNodeEmitter.h
		${IRR_HEADER_DIR}/IParticleAttractionAffector.h
		${IRR_HEADER_DIR}/IParticleBoxEmitter.h
		${IRR_HEADER_DIR}/IParticleCylinderEmitter.h
		${IRR_HEADER_DIR}/IParticleEmitter.h
		${IRR_HEADER_DIR}/IParticleFadeOutAffector.h
		${IRR_HEADER_DIR}/IParticleGravityAffector.h
		${IRR_HEADER_DIR}/IParticleMeshEmitter.h
		${IRR_HEADER_DIR}/IParticleRingEmitter.h
		${IRR_HEADER_DIR}/IParticleRotationAffector.h
		${IRR_HEADER_DIR}/IParticleSphereEmitter.h
		${IRR_HEADER_DIR}/IParticleSystemSceneNode.h
		${IRR_HEADER_DIR}/IQ3LevelMesh.h
		${IRR_HEADER_DIR}/IQ3Shader.h
		${IRR_HEADER_DIR}/IRandomizer.h
		${IRR_HEADER_DIR}/IReadFile.h
		${IRR_HEADER_DIR}/IReferenceCounted.h
		${IRR_HEADER_DIR}/irrAllocator.h
		${IRR_HEADER_DIR}/irrArray.h
		${IRR_HEADER_DIR}/IrrCompileConfig.h
		${IRR_HEADER_DIR}/IrrlichtDevice.h
		${IRR_HEADER_DIR}/irrlicht.h
		${IRR_HEADER_DIR}/irrList.h
		${IRR_HEADER_DIR}/irrMap.h
		${IRR_HEADER_DIR}/irrMath.h
		${IRR_HEADER_DIR}/irrpack.h
		${IRR_HEADER_DIR}/irrString.h
		${IRR_HEADER_DIR}/irrTypes.h
		${IRR_HEADER_DIR}/irrunpack.h
		${IRR_HEADER_DIR}/irrXML.h
		${IRR_HEADER_DIR}/ISceneCollisionManager.h
		${IRR_HEADER_DIR}/ISceneLoader.h
		${IRR_HEADER_DIR}/ISceneManager.h
		${IRR_HEADER_DIR}/ISceneNodeAnimatorCameraFPS.h
		${IRR_HEADER_DIR}/ISceneNodeAnimatorCameraMaya.h
		${IRR_HEADER_DIR}/ISceneNodeAnimatorCollisionResponse.h
		${IRR_HEADER_DIR}/ISceneNodeAnimatorFactory.h
		${IRR_HEADER_DIR}/ISceneNodeAnimator.h
		${IRR_HEADER_DIR}/ISceneNodeFactory.h
		${IRR_HEADER_DIR}/ISceneNode.h
		${IRR_HEADER_DIR}/ISceneUserDataSerializer.h
		${IRR_HEADER_DIR}/IShaderConstantSetCallBack.h
		${IRR_HEADER_DIR}/IShadowVolumeSceneNode.h
		${IRR_HEADER_DIR}/ISkinnedMesh.h
		${IRR_HEADER_DIR}/ITerrainSceneNode.h
		${IRR_HEADER_DIR}/ITextSceneNode.h
		${IRR_HEADER_DIR}/ITexture.h
		${IRR_HEADER_DIR}/ITimer.h
		${IRR_HEADER_DIR}/ITriangleSelector.h
		${IRR_HEADER_DIR}/IVertexBuffer.h
		${IRR_HEADER_DIR}/IVideoDriver.h
		${IRR_HEADER_DIR}/IVideoModeList.h
		${IRR_HEADER_DIR}/IVolumeLightSceneNode.h
		${IRR_HEADER_DIR}/IWriteFile.h
		${IRR_HEADER_DIR}/IXMLReader.h
		${IRR_HEADER_DIR}/IXMLWriter.h
		${IRR_HEADER_DIR}/Keycodes.h
		${IRR_HEADER_DIR}/line2d.h
		${IRR_HEADER_DIR}/line3d.h
		${IRR_HEADER_DIR}/matrix4.h
		${IRR_HEADER_DIR}/path.h
		${IRR_HEADER_DIR}/plane3d.h
		${IRR_HEADER_DIR}/position2d.h
		${IRR_HEADER_DIR}/quaternion.h
		${IRR_HEADER_DIR}/rect.h
		${IRR_HEADER_DIR}/S3DVertex.h
		${IRR_HEADER_DIR}/SAnimatedMesh.h
		${IRR_HEADER_DIR}/SceneParameters.h
		${IRR_HEADER_DIR}/SColor.h
		${IRR_HEADER_DIR}/SExposedVideoData.h
		${IRR_HEADER_DIR}/SIrrCreationParameters.h
		${IRR_HEADER_DIR}/SKeyMap.h
		${IRR_HEADER_DIR}/SLight.h
		${IRR_HEADER_DIR}/SMaterial.h
		${IRR_HEADER_DIR}/SMaterialLayer.h
		${IRR_HEADER_DIR}/SMeshBuffer.h
		${IRR_HEADER_DIR}/SMeshBufferLightMap.h
		${IRR_HEADER_DIR}/SMeshBufferTangents.h
		${IRR_HEADER_DIR}/SMesh.h
		${IRR_HEADER_DIR}/SParticle.h
		${IRR_HEADER_DIR}/SSharedMeshBuffer.h
		${IRR_HEADER_DIR}/SSkinMeshBuffer.h
		${IRR_HEADER_DIR}/SVertexIndex.h
		${IRR_HEADER_DIR}/SVertexManipulator.h
		${IRR_HEADER_DIR}/SViewFrustum.h
		${IRR_HEADER_DIR}/triangle3d.h
		${IRR_HEADER_DIR}/vector2d.h
		${IRR_HEADER_DIR}/vector3d.h
	)

	set(IRR_SOURCES
		${IRR_SOURCE_DIR}/BuiltInFont.h
		${IRR_SOURCE_DIR}/C3DSMeshFileLoader.cpp
		${IRR_SOURCE_DIR}/C3DSMeshFileLoader.h
		${IRR_SOURCE_DIR}/CAnimatedMeshHalfLife.cpp
		${IRR_SOURCE_DIR}/CAnimatedMeshHalfLife.h
		${IRR_SOURCE_DIR}/CAnimatedMeshMD2.cpp
		${IRR_SOURCE_DIR}/CAnimatedMeshMD2.h
		${IRR_SOURCE_DIR}/CAnimatedMeshMD3.cpp
		${IRR_SOURCE_DIR}/CAnimatedMeshMD3.h
		${IRR_SOURCE_DIR}/CAnimatedMeshSceneNode.cpp
		${IRR_SOURCE_DIR}/CAnimatedMeshSceneNode.h
		${IRR_SOURCE_DIR}/CAttributeImpl.h
		${IRR_SOURCE_DIR}/CAttributes.cpp
		${IRR_SOURCE_DIR}/CAttributes.h
		${IRR_SOURCE_DIR}/CB3DMeshFileLoader.cpp
		${IRR_SOURCE_DIR}/CB3DMeshFileLoader.h
		${IRR_SOURCE_DIR}/CBillboardSceneNode.cpp
		${IRR_SOURCE_DIR}/CBillboardSceneNode.h
		${IRR_SOURCE_DIR}/CBlit.h
		${IRR_SOURCE_DIR}/CBoneSceneNode.cpp
		${IRR_SOURCE_DIR}/CBoneSceneNode.h
		${IRR_SOURCE_DIR}/CBSPMeshFileLoader.cpp
		${IRR_SOURCE_DIR}/CBSPMeshFileLoader.h
		${IRR_SOURCE_DIR}/CBurningShader_Raster_Reference.cpp
		${IRR_SOURCE_DIR}/CCameraSceneNode.cpp
		${IRR_SOURCE_DIR}/CCameraSceneNode.h
		${IRR_SOURCE_DIR}/CCgMaterialRenderer.cpp
		${IRR_SOURCE_DIR}/CCgMaterialRenderer.h
		${IRR_SOURCE_DIR}/CColladaFileLoader.cpp
		${IRR_SOURCE_DIR}/CColladaFileLoader.h
		${IRR_SOURCE_DIR}/CColladaMeshWriter.cpp
		${IRR_SOURCE_DIR}/CColladaMeshWriter.h
		${IRR_SOURCE_DIR}/CColorConverter.cpp
		${IRR_SOURCE_DIR}/CColorConverter.h
		${IRR_SOURCE_DIR}/CCSMLoader.cpp
		${IRR_SOURCE_DIR}/CCSMLoader.h
		${IRR_SOURCE_DIR}/CCubeSceneNode.cpp
		${IRR_SOURCE_DIR}/CCubeSceneNode.h
		${IRR_SOURCE_DIR}/CD3D8Driver.cpp
		${IRR_SOURCE_DIR}/CD3D8Driver.h
		${IRR_SOURCE_DIR}/CD3D8MaterialRenderer.h
		${IRR_SOURCE_DIR}/CD3D8NormalMapRenderer.cpp
		${IRR_SOURCE_DIR}/CD3D8NormalMapRenderer.h
		${IRR_SOURCE_DIR}/CD3D8ParallaxMapRenderer.cpp
		${IRR_SOURCE_DIR}/CD3D8ParallaxMapRenderer.h
		${IRR_SOURCE_DIR}/CD3D8ShaderMaterialRenderer.cpp
		${IRR_SOURCE_DIR}/CD3D8ShaderMaterialRenderer.h
		${IRR_SOURCE_DIR}/CD3D8Texture.cpp
		${IRR_SOURCE_DIR}/CD3D8Texture.h
		${IRR_SOURCE_DIR}/CD3D9CgMaterialRenderer.cpp
		${IRR_SOURCE_DIR}/CD3D9CgMaterialRenderer.h
		${IRR_SOURCE_DIR}/CD3D9Driver.cpp
		${IRR_SOURCE_DIR}/CD3D9Driver.h
		${IRR_SOURCE_DIR}/CD3D9HLSLMaterialRenderer.cpp
		${IRR_SOURCE_DIR}/CD3D9HLSLMaterialRenderer.h
		${IRR_SOURCE_DIR}/CD3D9MaterialRenderer.h
		${IRR_SOURCE_DIR}/CD3D9NormalMapRenderer.cpp
		${IRR_SOURCE_DIR}/CD3D9NormalMapRenderer.h
		${IRR_SOURCE_DIR}/CD3D9ParallaxMapRenderer.cpp
		${IRR_SOURCE_DIR}/CD3D9ParallaxMapRenderer.h
		${IRR_SOURCE_DIR}/CD3D9ShaderMaterialRenderer.cpp
		${IRR_SOURCE_DIR}/CD3D9ShaderMaterialRenderer.h
		${IRR_SOURCE_DIR}/CD3D9Texture.cpp
		${IRR_SOURCE_DIR}/CD3D9Texture.h
		${IRR_SOURCE_DIR}/CDefaultGUIElementFactory.cpp
		${IRR_SOURCE_DIR}/CDefaultGUIElementFactory.h
		${IRR_SOURCE_DIR}/CDefaultSceneNodeAnimatorFactory.cpp
		${IRR_SOURCE_DIR}/CDefaultSceneNodeAnimatorFactory.h
		${IRR_SOURCE_DIR}/CDefaultSceneNodeFactory.cpp
		${IRR_SOURCE_DIR}/CDefaultSceneNodeFactory.h
		${IRR_SOURCE_DIR}/CDepthBuffer.cpp
		${IRR_SOURCE_DIR}/CDepthBuffer.h
		${IRR_SOURCE_DIR}/CDMFLoader.cpp
		${IRR_SOURCE_DIR}/CDMFLoader.h
		${IRR_SOURCE_DIR}/CDummyTransformationSceneNode.cpp
		${IRR_SOURCE_DIR}/CDummyTransformationSceneNode.h
		${IRR_SOURCE_DIR}/CEmptySceneNode.cpp
		${IRR_SOURCE_DIR}/CEmptySceneNode.h
		${IRR_SOURCE_DIR}/CFileList.cpp
		${IRR_SOURCE_DIR}/CFileList.h
		${IRR_SOURCE_DIR}/CFileSystem.cpp
		${IRR_SOURCE_DIR}/CFileSystem.h
		${IRR_SOURCE_DIR}/CFPSCounter.cpp
		${IRR_SOURCE_DIR}/CFPSCounter.h
		${IRR_SOURCE_DIR}/CGeometryCreator.cpp
		${IRR_SOURCE_DIR}/CGeometryCreator.h
		${IRR_SOURCE_DIR}/CGUIButton.cpp
		${IRR_SOURCE_DIR}/CGUIButton.h
		${IRR_SOURCE_DIR}/CGUICheckBox.cpp
		${IRR_SOURCE_DIR}/CGUICheckBox.h
		${IRR_SOURCE_DIR}/CGUIColorSelectDialog.cpp
		${IRR_SOURCE_DIR}/CGUIColorSelectDialog.h
		${IRR_SOURCE_DIR}/CGUIComboBox.cpp
		${IRR_SOURCE_DIR}/CGUIComboBox.h
		${IRR_SOURCE_DIR}/CGUIContextMenu.cpp
		${IRR_SOURCE_DIR}/CGUIContextMenu.h
		${IRR_SOURCE_DIR}/CGUIEditBox.cpp
		${IRR_SOURCE_DIR}/CGUIEditBox.h
		${IRR_SOURCE_DIR}/CGUIEnvironment.cpp
		${IRR_SOURCE_DIR}/CGUIEnvironment.h
		${IRR_SOURCE_DIR}/CGUIFileOpenDialog.cpp
		${IRR_SOURCE_DIR}/CGUIFileOpenDialog.h
		${IRR_SOURCE_DIR}/CGUIFont.cpp
		${IRR_SOURCE_DIR}/CGUIFont.h
		${IRR_SOURCE_DIR}/CGUIImage.cpp
		${IRR_SOURCE_DIR}/CGUIImage.h
		${IRR_SOURCE_DIR}/CGUIImageList.cpp
		${IRR_SOURCE_DIR}/CGUIImageList.h
		${IRR_SOURCE_DIR}/CGUIInOutFader.cpp
		${IRR_SOURCE_DIR}/CGUIInOutFader.h
		${IRR_SOURCE_DIR}/CGUIListBox.cpp
		${IRR_SOURCE_DIR}/CGUIListBox.h
		${IRR_SOURCE_DIR}/CGUIMenu.cpp
		${IRR_SOURCE_DIR}/CGUIMenu.h
		${IRR_SOURCE_DIR}/CGUIMeshViewer.cpp
		${IRR_SOURCE_DIR}/CGUIMeshViewer.h
		${IRR_SOURCE_DIR}/CGUIMessageBox.cpp
		${IRR_SOURCE_DIR}/CGUIMessageBox.h
		${IRR_SOURCE_DIR}/CGUIModalScreen.cpp
		${IRR_SOURCE_DIR}/CGUIModalScreen.h
		${IRR_SOURCE_DIR}/CGUIScrollBar.cpp
		${IRR_SOURCE_DIR}/CGUIScrollBar.h
		${IRR_SOURCE_DIR}/CGUISkin.cpp
		${IRR_SOURCE_DIR}/CGUISkin.h
		${IRR_SOURCE_DIR}/CGUISpinBox.cpp
		${IRR_SOURCE_DIR}/CGUISpinBox.h
		${IRR_SOURCE_DIR}/CGUISpriteBank.cpp
		${IRR_SOURCE_DIR}/CGUISpriteBank.h
		${IRR_SOURCE_DIR}/CGUIStaticText.cpp
		${IRR_SOURCE_DIR}/CGUIStaticText.h
		${IRR_SOURCE_DIR}/CGUITabControl.cpp
		${IRR_SOURCE_DIR}/CGUITabControl.h
		${IRR_SOURCE_DIR}/CGUITable.cpp
		${IRR_SOURCE_DIR}/CGUITable.h
		${IRR_SOURCE_DIR}/CGUIToolBar.cpp
		${IRR_SOURCE_DIR}/CGUIToolBar.h
		${IRR_SOURCE_DIR}/CGUITreeView.cpp
		${IRR_SOURCE_DIR}/CGUITreeView.h
		${IRR_SOURCE_DIR}/CGUIWindow.cpp
		${IRR_SOURCE_DIR}/CGUIWindow.h
		${IRR_SOURCE_DIR}/CImage.cpp
		${IRR_SOURCE_DIR}/CImage.h
		${IRR_SOURCE_DIR}/CImageLoaderBMP.cpp
		${IRR_SOURCE_DIR}/CImageLoaderBMP.h
		${IRR_SOURCE_DIR}/CImageLoaderDDS.cpp
		${IRR_SOURCE_DIR}/CImageLoaderDDS.h
		${IRR_SOURCE_DIR}/CImageLoaderJPG.cpp
		${IRR_SOURCE_DIR}/CImageLoaderJPG.h
		${IRR_SOURCE_DIR}/CImageLoaderPCX.cpp
		${IRR_SOURCE_DIR}/CImageLoaderPCX.h
		${IRR_SOURCE_DIR}/CImageLoaderPNG.cpp
		${IRR_SOURCE_DIR}/CImageLoaderPNG.h
		${IRR_SOURCE_DIR}/CImageLoaderPPM.cpp
		${IRR_SOURCE_DIR}/CImageLoaderPPM.h
		${IRR_SOURCE_DIR}/CImageLoaderPSD.cpp
		${IRR_SOURCE_DIR}/CImageLoaderPSD.h
		${IRR_SOURCE_DIR}/CImageLoaderRGB.cpp
		${IRR_SOURCE_DIR}/CImageLoaderRGB.h
		${IRR_SOURCE_DIR}/CImageLoaderTGA.cpp
		${IRR_SOURCE_DIR}/CImageLoaderTGA.h
		${IRR_SOURCE_DIR}/CImageLoaderWAL.cpp
		${IRR_SOURCE_DIR}/CImageLoaderWAL.h
		${IRR_SOURCE_DIR}/CImageWriterBMP.cpp
		${IRR_SOURCE_DIR}/CImageWriterBMP.h
		${IRR_SOURCE_DIR}/CImageWriterJPG.cpp
		${IRR_SOURCE_DIR}/CImageWriterJPG.h
		${IRR_SOURCE_DIR}/CImageWriterPCX.cpp
		${IRR_SOURCE_DIR}/CImageWriterPCX.h
		${IRR_SOURCE_DIR}/CImageWriterPNG.cpp
		${IRR_SOURCE_DIR}/CImageWriterPNG.h
		${IRR_SOURCE_DIR}/CImageWriterPPM.cpp
		${IRR_SOURCE_DIR}/CImageWriterPPM.h
		${IRR_SOURCE_DIR}/CImageWriterPSD.cpp
		${IRR_SOURCE_DIR}/CImageWriterPSD.h
		${IRR_SOURCE_DIR}/CImageWriterTGA.cpp
		${IRR_SOURCE_DIR}/CImageWriterTGA.h
		${IRR_SOURCE_DIR}/CIrrDeviceConsole.cpp
		${IRR_SOURCE_DIR}/CIrrDeviceConsole.h
		${IRR_SOURCE_DIR}/CIrrDeviceFB.cpp
		${IRR_SOURCE_DIR}/CIrrDeviceFB.h
		${IRR_SOURCE_DIR}/CIrrDeviceLinux.cpp
		${IRR_SOURCE_DIR}/CIrrDeviceLinux.h
		${IRR_SOURCE_DIR}/CIrrDeviceSDL.cpp
		${IRR_SOURCE_DIR}/CIrrDeviceSDL.h
		${IRR_SOURCE_DIR}/CIrrDeviceStub.cpp
		${IRR_SOURCE_DIR}/CIrrDeviceStub.h
		${IRR_SOURCE_DIR}/CIrrDeviceWin32.cpp
		${IRR_SOURCE_DIR}/CIrrDeviceWin32.h
		${IRR_SOURCE_DIR}/CIrrDeviceWinCE.cpp
		${IRR_SOURCE_DIR}/CIrrDeviceWinCE.h
		${IRR_SOURCE_DIR}/CIrrMeshFileLoader.cpp
		${IRR_SOURCE_DIR}/CIrrMeshFileLoader.h
		${IRR_SOURCE_DIR}/CIrrMeshWriter.cpp
		${IRR_SOURCE_DIR}/CIrrMeshWriter.h
		${IRR_SOURCE_DIR}/CLightSceneNode.cpp
		${IRR_SOURCE_DIR}/CLightSceneNode.h
		${IRR_SOURCE_DIR}/CLimitReadFile.cpp
		${IRR_SOURCE_DIR}/CLimitReadFile.h
		${IRR_SOURCE_DIR}/CLMTSMeshFileLoader.cpp
		${IRR_SOURCE_DIR}/CLMTSMeshFileLoader.h
		${IRR_SOURCE_DIR}/CLogger.cpp
		${IRR_SOURCE_DIR}/CLogger.h
		${IRR_SOURCE_DIR}/CLWOMeshFileLoader.cpp
		${IRR_SOURCE_DIR}/CLWOMeshFileLoader.h
		${IRR_SOURCE_DIR}/CMD2MeshFileLoader.cpp
		${IRR_SOURCE_DIR}/CMD2MeshFileLoader.h
		${IRR_SOURCE_DIR}/CMD3MeshFileLoader.cpp
		${IRR_SOURCE_DIR}/CMD3MeshFileLoader.h
		${IRR_SOURCE_DIR}/CMemoryFile.cpp
		${IRR_SOURCE_DIR}/CMemoryFile.h
		${IRR_SOURCE_DIR}/CMeshCache.cpp
		${IRR_SOURCE_DIR}/CMeshCache.h
		${IRR_SOURCE_DIR}/CMeshManipulator.cpp
		${IRR_SOURCE_DIR}/CMeshManipulator.h
		${IRR_SOURCE_DIR}/CMeshSceneNode.cpp
		${IRR_SOURCE_DIR}/CMeshSceneNode.h
		${IRR_SOURCE_DIR}/CMetaTriangleSelector.cpp
		${IRR_SOURCE_DIR}/CMetaTriangleSelector.h
		${IRR_SOURCE_DIR}/CMountPointReader.cpp
		${IRR_SOURCE_DIR}/CMountPointReader.h
		${IRR_SOURCE_DIR}/CMS3DMeshFileLoader.cpp
		${IRR_SOURCE_DIR}/CMS3DMeshFileLoader.h
		${IRR_SOURCE_DIR}/CMY3DHelper.h
		${IRR_SOURCE_DIR}/CMY3DMeshFileLoader.cpp
		${IRR_SOURCE_DIR}/CMY3DMeshFileLoader.h
		${IRR_SOURCE_DIR}/CNPKReader.cpp
		${IRR_SOURCE_DIR}/CNPKReader.h
		${IRR_SOURCE_DIR}/CNullDriver.cpp
		${IRR_SOURCE_DIR}/CNullDriver.h
		${IRR_SOURCE_DIR}/COBJMeshFileLoader.cpp
		${IRR_SOURCE_DIR}/COBJMeshFileLoader.h
		${IRR_SOURCE_DIR}/COBJMeshWriter.cpp
		${IRR_SOURCE_DIR}/COBJMeshWriter.h
		${IRR_SOURCE_DIR}/COCTLoader.cpp
		${IRR_SOURCE_DIR}/COCTLoader.h
		${IRR_SOURCE_DIR}/COctreeSceneNode.cpp
		${IRR_SOURCE_DIR}/COctreeSceneNode.h
		${IRR_SOURCE_DIR}/COctreeTriangleSelector.cpp
		${IRR_SOURCE_DIR}/COctreeTriangleSelector.h
		${IRR_SOURCE_DIR}/COgreMeshFileLoader.cpp
		${IRR_SOURCE_DIR}/COgreMeshFileLoader.h
		${IRR_SOURCE_DIR}/COpenGLCgMaterialRenderer.cpp
		${IRR_SOURCE_DIR}/COpenGLCgMaterialRenderer.h
		${IRR_SOURCE_DIR}/COpenGLDriver.cpp
		${IRR_SOURCE_DIR}/COpenGLDriver.h
		${IRR_SOURCE_DIR}/COpenGLExtensionHandler.cpp
		${IRR_SOURCE_DIR}/COpenGLExtensionHandler.h
		${IRR_SOURCE_DIR}/COpenGLMaterialRenderer.h
		${IRR_SOURCE_DIR}/COpenGLNormalMapRenderer.cpp
		${IRR_SOURCE_DIR}/COpenGLNormalMapRenderer.h
		${IRR_SOURCE_DIR}/COpenGLParallaxMapRenderer.cpp
		${IRR_SOURCE_DIR}/COpenGLParallaxMapRenderer.h
		${IRR_SOURCE_DIR}/COpenGLShaderMaterialRenderer.cpp
		${IRR_SOURCE_DIR}/COpenGLShaderMaterialRenderer.h
		${IRR_SOURCE_DIR}/COpenGLSLMaterialRenderer.cpp
		${IRR_SOURCE_DIR}/COpenGLSLMaterialRenderer.h
		${IRR_SOURCE_DIR}/COpenGLTexture.cpp
		${IRR_SOURCE_DIR}/COpenGLTexture.h
		${IRR_SOURCE_DIR}/COSOperator.cpp
		${IRR_SOURCE_DIR}/COSOperator.h
		${IRR_SOURCE_DIR}/CPakReader.cpp
		${IRR_SOURCE_DIR}/CPakReader.h
		${IRR_SOURCE_DIR}/CParticleAnimatedMeshSceneNodeEmitter.cpp
		${IRR_SOURCE_DIR}/CParticleAnimatedMeshSceneNodeEmitter.h
		${IRR_SOURCE_DIR}/CParticleAttractionAffector.cpp
		${IRR_SOURCE_DIR}/CParticleAttractionAffector.h
		${IRR_SOURCE_DIR}/CParticleBoxEmitter.cpp
		${IRR_SOURCE_DIR}/CParticleBoxEmitter.h
		${IRR_SOURCE_DIR}/CParticleCylinderEmitter.cpp
		${IRR_SOURCE_DIR}/CParticleCylinderEmitter.h
		${IRR_SOURCE_DIR}/CParticleFadeOutAffector.cpp
		${IRR_SOURCE_DIR}/CParticleFadeOutAffector.h
		${IRR_SOURCE_DIR}/CParticleGravityAffector.cpp
		${IRR_SOURCE_DIR}/CParticleGravityAffector.h
		${IRR_SOURCE_DIR}/CParticleMeshEmitter.cpp
		${IRR_SOURCE_DIR}/CParticleMeshEmitter.h
		${IRR_SOURCE_DIR}/CParticlePointEmitter.cpp
		${IRR_SOURCE_DIR}/CParticlePointEmitter.h
		${IRR_SOURCE_DIR}/CParticleRingEmitter.cpp
		${IRR_SOURCE_DIR}/CParticleRingEmitter.h
		${IRR_SOURCE_DIR}/CParticleRotationAffector.cpp
		${IRR_SOURCE_DIR}/CParticleRotationAffector.h
		${IRR_SOURCE_DIR}/CParticleScaleAffector.cpp
		${IRR_SOURCE_DIR}/CParticleScaleAffector.h
		${IRR_SOURCE_DIR}/CParticleSphereEmitter.cpp
		${IRR_SOURCE_DIR}/CParticleSphereEmitter.h
		${IRR_SOURCE_DIR}/CParticleSystemSceneNode.cpp
		${IRR_SOURCE_DIR}/CParticleSystemSceneNode.h
		${IRR_SOURCE_DIR}/CPLYMeshFileLoader.cpp
		${IRR_SOURCE_DIR}/CPLYMeshFileLoader.h
		${IRR_SOURCE_DIR}/CPLYMeshWriter.cpp
		${IRR_SOURCE_DIR}/CPLYMeshWriter.h
		${IRR_SOURCE_DIR}/CQ3LevelMesh.cpp
		${IRR_SOURCE_DIR}/CQ3LevelMesh.h
		${IRR_SOURCE_DIR}/CQuake3ShaderSceneNode.cpp
		${IRR_SOURCE_DIR}/CQuake3ShaderSceneNode.h
		${IRR_SOURCE_DIR}/CReadFile.cpp
		${IRR_SOURCE_DIR}/CReadFile.h
		${IRR_SOURCE_DIR}/CSceneCollisionManager.cpp
		${IRR_SOURCE_DIR}/CSceneCollisionManager.h
		${IRR_SOURCE_DIR}/CSceneLoaderIrr.cpp
		${IRR_SOURCE_DIR}/CSceneLoaderIrr.h
		${IRR_SOURCE_DIR}/CSceneManager.cpp
		${IRR_SOURCE_DIR}/CSceneManager.h
		${IRR_SOURCE_DIR}/CSceneNodeAnimatorCameraFPS.cpp
		${IRR_SOURCE_DIR}/CSceneNodeAnimatorCameraFPS.h
		${IRR_SOURCE_DIR}/CSceneNodeAnimatorCameraMaya.cpp
		${IRR_SOURCE_DIR}/CSceneNodeAnimatorCameraMaya.h
		${IRR_SOURCE_DIR}/CSceneNodeAnimatorCollisionResponse.cpp
		${IRR_SOURCE_DIR}/CSceneNodeAnimatorCollisionResponse.h
		${IRR_SOURCE_DIR}/CSceneNodeAnimatorDelete.cpp
		${IRR_SOURCE_DIR}/CSceneNodeAnimatorDelete.h
		${IRR_SOURCE_DIR}/CSceneNodeAnimatorFlyCircle.cpp
		${IRR_SOURCE_DIR}/CSceneNodeAnimatorFlyCircle.h
		${IRR_SOURCE_DIR}/CSceneNodeAnimatorFlyStraight.cpp
		${IRR_SOURCE_DIR}/CSceneNodeAnimatorFlyStraight.h
		${IRR_SOURCE_DIR}/CSceneNodeAnimatorFollowSpline.cpp
		${IRR_SOURCE_DIR}/CSceneNodeAnimatorFollowSpline.h
		${IRR_SOURCE_DIR}/CSceneNodeAnimatorRotation.cpp
		${IRR_SOURCE_DIR}/CSceneNodeAnimatorRotation.h
		${IRR_SOURCE_DIR}/CSceneNodeAnimatorTexture.cpp
		${IRR_SOURCE_DIR}/CSceneNodeAnimatorTexture.h
		${IRR_SOURCE_DIR}/CShadowVolumeSceneNode.cpp
		${IRR_SOURCE_DIR}/CShadowVolumeSceneNode.h
		${IRR_SOURCE_DIR}/CSkinnedMesh.cpp
		${IRR_SOURCE_DIR}/CSkinnedMesh.h
		${IRR_SOURCE_DIR}/CSkyBoxSceneNode.cpp
		${IRR_SOURCE_DIR}/CSkyBoxSceneNode.h
		${IRR_SOURCE_DIR}/CSkyDomeSceneNode.cpp
		${IRR_SOURCE_DIR}/CSkyDomeSceneNode.h
		${IRR_SOURCE_DIR}/CSMFMeshFileLoader.cpp
		${IRR_SOURCE_DIR}/CSMFMeshFileLoader.h
		${IRR_SOURCE_DIR}/CSoftware2MaterialRenderer.h
		${IRR_SOURCE_DIR}/CSoftwareDriver2.cpp
		${IRR_SOURCE_DIR}/CSoftwareDriver2.h
		${IRR_SOURCE_DIR}/CSoftwareDriver.cpp
		${IRR_SOURCE_DIR}/CSoftwareDriver.h
		${IRR_SOURCE_DIR}/CSoftwareTexture2.cpp
		${IRR_SOURCE_DIR}/CSoftwareTexture2.h
		${IRR_SOURCE_DIR}/CSoftwareTexture.cpp
		${IRR_SOURCE_DIR}/CSoftwareTexture.h
		${IRR_SOURCE_DIR}/CSphereSceneNode.cpp
		${IRR_SOURCE_DIR}/CSphereSceneNode.h
		${IRR_SOURCE_DIR}/CSTLMeshFileLoader.cpp
		${IRR_SOURCE_DIR}/CSTLMeshFileLoader.h
		${IRR_SOURCE_DIR}/CSTLMeshWriter.cpp
		${IRR_SOURCE_DIR}/CSTLMeshWriter.h
		${IRR_SOURCE_DIR}/CTarReader.cpp
		${IRR_SOURCE_DIR}/CTarReader.h
		${IRR_SOURCE_DIR}/CTerrainSceneNode.cpp
		${IRR_SOURCE_DIR}/CTerrainSceneNode.h
		${IRR_SOURCE_DIR}/CTerrainTriangleSelector.cpp
		${IRR_SOURCE_DIR}/CTerrainTriangleSelector.h
		${IRR_SOURCE_DIR}/CTextSceneNode.cpp
		${IRR_SOURCE_DIR}/CTextSceneNode.h
		${IRR_SOURCE_DIR}/CTimer.h
		${IRR_SOURCE_DIR}/CTRFlat.cpp
		${IRR_SOURCE_DIR}/CTRFlatWire.cpp
		${IRR_SOURCE_DIR}/CTRGouraud2.cpp
		${IRR_SOURCE_DIR}/CTRGouraudAlpha2.cpp
		${IRR_SOURCE_DIR}/CTRGouraudAlphaNoZ2.cpp
		${IRR_SOURCE_DIR}/CTRGouraud.cpp
		${IRR_SOURCE_DIR}/CTRGouraudWire.cpp
		${IRR_SOURCE_DIR}/CTriangleBBSelector.cpp
		${IRR_SOURCE_DIR}/CTriangleBBSelector.h
		${IRR_SOURCE_DIR}/CTriangleSelector.cpp
		${IRR_SOURCE_DIR}/CTriangleSelector.h
		${IRR_SOURCE_DIR}/CTRNormalMap.cpp
		${IRR_SOURCE_DIR}/CTRStencilShadow.cpp
		${IRR_SOURCE_DIR}/CTRTextureBlend.cpp
		${IRR_SOURCE_DIR}/CTRTextureDetailMap2.cpp
		${IRR_SOURCE_DIR}/CTRTextureFlat.cpp
		${IRR_SOURCE_DIR}/CTRTextureFlatWire.cpp
		${IRR_SOURCE_DIR}/CTRTextureGouraud2.cpp
		${IRR_SOURCE_DIR}/CTRTextureGouraudAdd2.cpp
		${IRR_SOURCE_DIR}/CTRTextureGouraudAdd.cpp
		${IRR_SOURCE_DIR}/CTRTextureGouraudAddNoZ2.cpp
		${IRR_SOURCE_DIR}/CTRTextureGouraudAlpha.cpp
		${IRR_SOURCE_DIR}/CTRTextureGouraudAlphaNoZ.cpp
		${IRR_SOURCE_DIR}/CTRTextureGouraud.cpp
		${IRR_SOURCE_DIR}/CTRTextureGouraud.h
		${IRR_SOURCE_DIR}/CTRTextureGouraudNoZ2.cpp
		${IRR_SOURCE_DIR}/CTRTextureGouraudNoZ.cpp
		${IRR_SOURCE_DIR}/CTRTextureGouraudVertexAlpha2.cpp
		${IRR_SOURCE_DIR}/CTRTextureGouraudWire.cpp
		${IRR_SOURCE_DIR}/CTRTextureLightMap2_Add.cpp
		${IRR_SOURCE_DIR}/CTRTextureLightMap2_M1.cpp
		${IRR_SOURCE_DIR}/CTRTextureLightMap2_M2.cpp
		${IRR_SOURCE_DIR}/CTRTextureLightMap2_M4.cpp
		${IRR_SOURCE_DIR}/CTRTextureLightMapGouraud2_M4.cpp
		${IRR_SOURCE_DIR}/CTRTextureWire2.cpp
		${IRR_SOURCE_DIR}/CVideoModeList.cpp
		${IRR_SOURCE_DIR}/CVideoModeList.h
		${IRR_SOURCE_DIR}/CVolumeLightSceneNode.cpp
		${IRR_SOURCE_DIR}/CVolumeLightSceneNode.h
		${IRR_SOURCE_DIR}/CWADReader.cpp
		${IRR_SOURCE_DIR}/CWADReader.h
		${IRR_SOURCE_DIR}/CWaterSurfaceSceneNode.cpp
		${IRR_SOURCE_DIR}/CWaterSurfaceSceneNode.h
		${IRR_SOURCE_DIR}/CWriteFile.cpp
		${IRR_SOURCE_DIR}/CWriteFile.h
		${IRR_SOURCE_DIR}/CXMeshFileLoader.cpp
		${IRR_SOURCE_DIR}/CXMeshFileLoader.h
		${IRR_SOURCE_DIR}/CXMLReader.cpp
		${IRR_SOURCE_DIR}/CXMLReader.h
		${IRR_SOURCE_DIR}/CXMLReaderImpl.h
		${IRR_SOURCE_DIR}/CXMLWriter.cpp
		${IRR_SOURCE_DIR}/CXMLWriter.h
		${IRR_SOURCE_DIR}/CZBuffer.cpp
		${IRR_SOURCE_DIR}/CZBuffer.h
		${IRR_SOURCE_DIR}/CZipReader.cpp
		${IRR_SOURCE_DIR}/CZipReader.h
		${IRR_SOURCE_DIR}/dmfsupport.h
		${IRR_SOURCE_DIR}/glext.h
		${IRR_SOURCE_DIR}/glxext.h
		${IRR_SOURCE_DIR}/IAttribute.h
		${IRR_SOURCE_DIR}/IBurningShader.cpp
		${IRR_SOURCE_DIR}/IBurningShader.h
		${IRR_SOURCE_DIR}/IDepthBuffer.h
		${IRR_SOURCE_DIR}/IImagePresenter.h
		${IRR_SOURCE_DIR}/Irrlicht.cpp
		${IRR_SOURCE_DIR}/irrXML.cpp
		${IRR_SOURCE_DIR}/ISceneNodeAnimatorFinishing.h
		${IRR_SOURCE_DIR}/ITriangleRenderer.h
		${IRR_SOURCE_DIR}/IZBuffer.h
		${IRR_SOURCE_DIR}/Octree.h
		${IRR_SOURCE_DIR}/os.cpp
		${IRR_SOURCE_DIR}/os.h
		${IRR_SOURCE_DIR}/resource.h
		${IRR_SOURCE_DIR}/S2DVertex.h
		${IRR_SOURCE_DIR}/S4DVertex.h
		${IRR_SOURCE_DIR}/SoftwareDriver2_compile_config.h
		${IRR_SOURCE_DIR}/SoftwareDriver2_helper.h
		${IRR_SOURCE_DIR}/wglext.h
		${IRR_SOURCE_DIR}/aesGladman/aes.h
		${IRR_SOURCE_DIR}/aesGladman/aescrypt.cpp
		${IRR_SOURCE_DIR}/aesGladman/aeskey.cpp
		${IRR_SOURCE_DIR}/aesGladman/aesopt.h
		${IRR_SOURCE_DIR}/aesGladman/aestab.cpp
		${IRR_SOURCE_DIR}/aesGladman/fileenc.cpp
		${IRR_SOURCE_DIR}/aesGladman/fileenc.h
		${IRR_SOURCE_DIR}/aesGladman/hmac.cpp
		${IRR_SOURCE_DIR}/aesGladman/hmac.h
		${IRR_SOURCE_DIR}/aesGladman/prng.cpp
		${IRR_SOURCE_DIR}/aesGladman/prng.h
		${IRR_SOURCE_DIR}/aesGladman/pwd2key.cpp
		${IRR_SOURCE_DIR}/aesGladman/pwd2key.h
		${IRR_SOURCE_DIR}/aesGladman/sha1.cpp
		${IRR_SOURCE_DIR}/aesGladman/sha1.h
		${IRR_SOURCE_DIR}/aesGladman/sha2.cpp
		${IRR_SOURCE_DIR}/aesGladman/sha2.h
		${IRR_SOURCE_DIR}/lzma/LzmaDec.c
		${IRR_SOURCE_DIR}/lzma/LzmaDec.h
		${IRR_SOURCE_DIR}/lzma/Types.h)

	message("${BoldRed}[benni] BUILD_TARGET: ${PROJECT_NAME}${ColourReset}")
	message("CMAKE_CURRENT_LIST_DIR = ${CMAKE_CURRENT_LIST_DIR}")
	message("IRR_INCLUDE_DIR = ${IRR_INCLUDE_DIR}")
	message("IRR_HEADER_DIR = ${IRR_HEADER_DIR}")
	message("IRR_SOURCE_DIR = ${IRR_SOURCE_DIR}")	
	#message("IRR_HEADERS = ${IRR_HEADERS}")
	#message("IRR_SOURCES = ${IRR_SOURCES}")
	
	add_library(Irrlicht STATIC "")
	### <Add option="-Os -O3 -O2 -Wall -W -Wno-unused-parameter -U__STRICT_ANSI__ -DWIN32 -DNDEBUG -D_WINDOWS -D_IRR_STATIC_LIB_ -D_CRT_SECURE_NO_DEPRECATE -D__GNUWIN32__
	target_compile_options(Irrlicht PUBLIC -fpermissive) # -Wall -pipe -fno-exceptions -fno-rtti -fstrict-aliasing -O3 -fexpensive-optimizations)
	target_compile_definitions(Irrlicht PUBLIC -DUSE_IRRLICHT=1 -DUSE_LIB_IRRLICHT=1 -D_IRR_STATIC_LIB_
		-DNO_IRR_COMPILE_WITH_DIRECTINPUT_JOYSTICK_ -DNO_IRR_COMPILE_WITH_DIRECT3D_9_)
		
	target_include_directories(Irrlicht PRIVATE 
								${IRR_SOURCE_DIR} 
								${IRR_SOURCE_DIR}/aesGladman
								${IRR_SOURCE_DIR}/lzma)
								
	target_sources(Irrlicht PRIVATE ${IRR_SOURCES} ${IRR_HEADERS})
	
	target_link_libraries(Irrlicht PUBLIC png jpeg bzip2 z m)

	if (UNIX)
		target_include_directories(Irrlicht PUBLIC -I/usr/X11R6/include)
		target_link_libraries(Irrlicht PUBLIC GL Xxf86vm X11 Xcursor)
	elseif (WIN32)
		target_compile_definitions(Irrlicht PUBLIC -D__GNUWIN32__ -D_WIN32 -DWIN32 -D_WINDOWS -D_MBCS) 
		target_link_libraries(Irrlicht PUBLIC kernel32 user32 gdi32 winspool comdlg32 advapi32 shell32 ole32 oleaut32 uuid opengl32 winmm) # d3dx9d # -Wl,--add-stdcall-alias	
	endif()

	target_include_directories(Irrlicht PUBLIC ${IRR_INCLUDE_DIR}) # For the SDK
	file(COPY ${IRR_HEADERS} DESTINATION ${IRR_INCLUDE_DIR}) # For the SDK

endif()
